Fix of Free Spaces in Ubuntu

--- a/examples/tutorials/flow-in-pipeline/pipeline.ipynb
+++ b/examples/tutorials/flow-in-pipeline/pipeline.ipynb
@@ -127,7 +127,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data_input = Input(path=\"../../flows/standard/web-classification/data.jsonl\", type=AssetTypes.URI_FILE)\n",
+    "data_input = Input(\n",
+    "    path=\"../../flows/standard/web-classification/data.jsonl\", type=AssetTypes.URI_FILE\n",
+    ")\n",
+    "\n",
     "\n",
     "@pipeline()\n",
     "def pipeline_func_with_flow(data):\n",
