--- a/examples/tutorials/run-management/run-management.ipynb
+++ b/examples/tutorials/run-management/run-management.ipynb
@@ -119,9 +119,7 @@
     "base_run = load_run(\n",
     "    source=\"../../flows/standard/web-classification/run.yml\",\n",
     "    # override the default params in the YAML file\n",
-    "    params_override=[\n",
-    "        {\"column_mapping\": {\"url\": \"${data.url}\"}}\n",
-    "    ]\n",
+    "    params_override=[{\"column_mapping\": {\"url\": \"${data.url}\"}}],\n",
     ")\n",
     "\n",
     "# create the run\n",
