--- a/examples/tutorials/flow-as-a-function/sample.ipynb
+++ b/examples/tutorials/flow-as-a-function/sample.ipynb
@@ -105,6 +105,23 @@
     "# if specified to True, the f call will return a generator\n",
     "f.context.streaming = True\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pydash\n",
+    "\n",
+    "\n",
+    "test_obj = {\n",
+    "    \"nodes\": [\n",
+    "        {\"name\": 1, \"val\": 1},\n",
+    "        {\"name\": 2, \"val\": 2},\n",
+    "    ]\n",
+    "}"
+   ]
   }
  ],
  "metadata": {
