--- a/examples/tutorials/flow-as-a-function/sample.ipynb
+++ b/examples/tutorials/flow-as-a-function/sample.ipynb
@@ -9,21 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "ImportError",
-     "evalue": "cannot import name 'load_flow' from 'promptflow' (D:\\code\\PromptFlow\\src\\promptflow-sdk\\promptflow\\__init__.py)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[1;32md:\\code\\prompt-flow\\examples\\tutorials\\flow-as-a-function\\sample.ipynb Cell 2\u001b[0m line \u001b[0;36m1\n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/code/prompt-flow/examples/tutorials/flow-as-a-function/sample.ipynb#W1sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mpromptflow\u001b[39;00m \u001b[39mimport\u001b[39;00m load_flow\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/code/prompt-flow/examples/tutorials/flow-as-a-function/sample.ipynb#W1sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m flow_path\u001b[39m=\u001b[39m\u001b[39m\"\u001b[39m\u001b[39m../../flows/standard/web-classification\u001b[39m\u001b[39m\"\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/code/prompt-flow/examples/tutorials/flow-as-a-function/sample.ipynb#W1sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m f \u001b[39m=\u001b[39m load_flow(source\u001b[39m=\u001b[39mflow_path)\n",
-      "\u001b[1;31mImportError\u001b[0m: cannot import name 'load_flow' from 'promptflow' (D:\\code\\PromptFlow\\src\\promptflow-sdk\\promptflow\\__init__.py)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from promptflow import load_flow\n",
     "\n",
@@ -54,9 +42,9 @@
     "\n",
     "f = load_flow(\n",
     "    source=flow_path,\n",
-    "    # need to create the connection\n",
-    "    connections={\"classify_with_llm\": {\"connection\": \"not_exist\"}},\n",
     ")\n",
+    "# need to create the connection\n",
+    "f.context.connections={\"classify_with_llm\": {\"connection\": \"new_ai_connection\"}}\n",
     "\n",
     "result = f(url=\"https://www.youtube.com/watch?v=o5ZQyXaAv1g\")\n",
     "\n",
@@ -64,46 +52,35 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example 3: Local flow as a function with flow inputs overwrite"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = load_flow(\n",
-    "    source=flow_path,\n",
-    "    variant=\"${summarize_text_content.variant_0}\",\n",
+    "from promptflow.entities import FlowContext\n",
+    "\n",
+    "f = load_flow(source=flow_path)\n",
+    "f.context = FlowContext(\n",
+    "    # node \"fetch_text_content_from_url\" will take inputs from the following command instead of from flow input\n",
+    "    overrides={\"nodes.fetch_text_content_from_url.inputs.url\": \"https://www.youtube.com/watch?v=o5ZQyXaAv1g\"},\n",
     ")\n",
-    "\n",
-    "result = f(url=\"https://www.youtube.com/watch?v=o5ZQyXaAv1g\")\n",
-    "\n",
+    "# the url=\"unknown\" will not take effect\n",
+    "result = f(url=\"unknown\")\n",
     "print(result)"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "from promptflow import load_flow\n",
-    "from promptflow.entities import Flow\n",
-    "\n",
-    "# load the flow\n",
-    "f: Flow = load_flow(\n",
-    "   source='xx.yaml', \n",
-    "   # user can specify variant here to load a specific variant\n",
-    "   variant=\"${summarize_text_content.variant_0}\",\n",
-    ") \n",
-    "\n",
-    "from promptflow import load_flow\n",
-    "from promptflow.entities import Flow\n",
-    "\n",
-    "# load the flow\n",
-    "f: Flow = load_flow(\n",
-    "   source='xx.yaml', \n",
-    ") \n",
-    "# if specified to True, the f call will return a generator\n",
-    "f.context.streaming = True\n"
+    "## Example 4: Load flow as a function with streaming output"
    ]
   },
   {
@@ -112,15 +89,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pydash\n",
-    "\n",
-    "\n",
-    "test_obj = {\n",
-    "    \"nodes\": [\n",
-    "        {\"name\": 1, \"val\": 1},\n",
-    "        {\"name\": 2, \"val\": 2},\n",
+    "f = load_flow(source=\"../../flows/chat/basic-chat\")\n",
+    "f.context.streaming = True\n",
+    "result = f(\n",
+    "    chat_history=[\n",
+    "        {\n",
+    "            \"inputs\": {\"chat_input\": \"Hi\"}, \n",
+    "            \"outputs\": {\"chat_output\": \"Hello! How can I assist you today?\"}\n",
+    "        }\n",
     "    ]\n",
-    "}"
+    ")\n",
+    "\n",
+    "# the result will be a generator, iterate it to get the result\n",
+    "for r in result:\n",
+    "    print(r)"
    ]
   }
  ],
