--- a/examples/tutorials/flow-as-a-function/sample.ipynb
+++ b/examples/tutorials/flow-as-a-function/sample.ipynb
@@ -18,9 +18,10 @@
     "\n",
     "flow_path=\"../../flows/standard/web-classification\"\n",
     "\n",
+    "sample_url = \"https://www.apple.com/shop/buy-iphone/iphone-14\"\n",
     "f = load_flow(source=flow_path)\n",
     "\n",
-    "result = f(url=\"https://www.youtube.com/watch?v=o5ZQyXaAv1g\")\n",
+    "result = f(url=sample_url)\n",
     "\n",
     "print(result)"
    ]
@@ -46,7 +47,7 @@
     "# need to create the connection\n",
     "f.context.connections={\"classify_with_llm\": {\"connection\": \"new_ai_connection\"}}\n",
     "\n",
-    "result = f(url=\"https://www.youtube.com/watch?v=o5ZQyXaAv1g\")\n",
+    "result = f(url=sample_url)\n",
     "\n",
     "print(result)"
    ]
@@ -69,7 +70,7 @@
     "f = load_flow(source=flow_path)\n",
     "f.context = FlowContext(\n",
     "    # node \"fetch_text_content_from_url\" will take inputs from the following command instead of from flow input\n",
-    "    overrides={\"nodes.fetch_text_content_from_url.inputs.url\": \"https://www.youtube.com/watch?v=o5ZQyXaAv1g\"},\n",
+    "    overrides={\"nodes.fetch_text_content_from_url.inputs.url\": sample_url},\n",
     ")\n",
     "# the url=\"unknown\" will not take effect\n",
     "result = f(url=\"unknown\")\n",
