--- a/examples/tutorials/flow-as-a-function/sample.ipynb
+++ b/examples/tutorials/flow-as-a-function/sample.ipynb
@@ -17,10 +17,9 @@
     "\n",
     "\n",
     "flow_path=\"../../flows/standard/web-classification\"\n",
+    "sample_url = \"https://www.youtube.com/watch?v=o5ZQyXaAv1g\"\n",
     "\n",
-    "sample_url = \"https://www.apple.com/shop/buy-iphone/iphone-14\"\n",
     "f = load_flow(source=flow_path)\n",
-    "\n",
     "result = f(url=sample_url)\n",
     "\n",
     "print(result)"
@@ -39,8 +38,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "flow_path=\"../../flows/standard/web-classification\"\n",
-    "\n",
     "f = load_flow(\n",
     "    source=flow_path,\n",
     ")\n",
