--- a/examples/tutorials/flow-deploy/create-service-with-flow/sample.ipynb
+++ b/examples/tutorials/flow-deploy/create-service-with-flow/sample.ipynb
@@ -16,7 +16,7 @@
     "from promptflow import load_flow\n",
     "\n",
     "\n",
-    "flow_path=\"../../flows/standard/web-classification\"\n",
+    "flow_path=\"../../../flows/standard/web-classification\"\n",
     "sample_url = \"https://www.youtube.com/watch?v=o5ZQyXaAv1g\"\n",
     "\n",
     "f = load_flow(source=flow_path)\n",
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = load_flow(source=\"../../flows/chat/basic-chat\")\n",
+    "f = load_flow(source=\"../../../flows/chat/basic-chat\")\n",
     "f.context.streaming = True\n",
     "result = f(\n",
     "    chat_history=[\n",
