--- a/examples/tutorials/get-started/flow-as-function.ipynb
+++ b/examples/tutorials/get-started/flow-as-function.ipynb
@@ -16,7 +16,7 @@
     "from promptflow import load_flow\n",
     "\n",
     "\n",
-    "flow_path=\"../../../flows/standard/web-classification\"\n",
+    "flow_path=\"../../flows/standard/web-classification\"\n",
     "sample_url = \"https://www.youtube.com/watch?v=o5ZQyXaAv1g\"\n",
     "\n",
     "f = load_flow(source=flow_path)\n",
@@ -87,7 +87,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = load_flow(source=\"../../../flows/chat/basic-chat\")\n",
+    "f = load_flow(source=\"../../flows/chat/basic-chat\")\n",
     "f.context.streaming = True\n",
     "result = f(\n",
     "    chat_history=[\n",
@@ -95,12 +95,17 @@
     "            \"inputs\": {\"chat_input\": \"Hi\"}, \n",
     "            \"outputs\": {\"chat_output\": \"Hello! How can I assist you today?\"}\n",
     "        }\n",
-    "    ]\n",
+    "    ],\n",
+    "    question=\"How are you?\"\n",
     ")\n",
     "\n",
+    "\n",
+    "answer = \"\"\n",
     "# the result will be a generator, iterate it to get the result\n",
-    "for r in result:\n",
-    "    print(r)"
+    "for r in result[\"answer\"]:\n",
+    "    answer += r\n",
+    "\n",
+    "print(answer)"
    ]
   }
  ],
