--- a/examples/tutorials/get-started/quickstart.ipynb
+++ b/examples/tutorials/get-started/quickstart.ipynb
@@ -162,6 +162,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "### Flow as a function\n",
+    "\n",
+    "We have also implemented a syntex sugar where you can consume a flow like a python function, with ability to override connections, inputs and other runtime configs.\n",
+    "Reference [here](./flow-as-function.ipynb) for more details."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Batch run with a data file (with multiple lines of test data)\n"
    ]
   },
@@ -408,7 +418,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
