--- a/examples/tutorials/run-management/cloud-run-management.ipynb
+++ b/examples/tutorials/run-management/cloud-run-management.ipynb
@@ -241,9 +241,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3 Create a flow run which uses an existing run's inputs data\n",
+    "## 3 Create a flow run which uses an existing run's inputs\n",
     "\n",
-    "When running a flow with an existing run, you can reference either it's inputs data or outputs in column mapping.\n",
+    "When running a flow with an existing run, you can reference either it's inputs or outputs in column mapping.\n",
     "The following code cell show how to reference a run's inputs in column mapping."
    ]
   },
