--- a/examples/tutorials/get-started/flow-as-function.ipynb
+++ b/examples/tutorials/get-started/flow-as-function.ipynb
@@ -46,7 +46,10 @@
    "outputs": [],
    "source": [
     "# create needed connection\n",
+    "import promptflow\n",
     "from promptflow.entities import AzureOpenAIConnection, OpenAIConnection\n",
+    "\n",
+    "pf = promptflow.PFClient()\n",
     "\n",
     "try:\n",
     "    conn_name = \"new_ai_connection\"\n",
