--- a/examples/tutorials/get-started/flow-as-function.ipynb
+++ b/examples/tutorials/get-started/flow-as-function.ipynb
@@ -16,7 +16,7 @@
     "from promptflow import load_flow\n",
     "\n",
     "\n",
-    "flow_path=\"../../../flows/standard/web-classification\"\n",
+    "flow_path=\"../../flows/standard/web-classification\"\n",
     "sample_url = \"https://www.youtube.com/watch?v=o5ZQyXaAv1g\"\n",
     "\n",
     "f = load_flow(source=flow_path)\n",
@@ -30,6 +30,50 @@
    "metadata": {},
    "source": [
     "# Example2: Load flow as a function with connection overwrite"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You will need to have a connection named \"new_ai_connection\" to run flow with new connection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# create needed connection\n",
+    "import promptflow\n",
+    "from promptflow.entities import AzureOpenAIConnection, OpenAIConnection\n",
+    "\n",
+    "pf = promptflow.PFClient()\n",
+    "\n",
+    "try:\n",
+    "    conn_name = \"new_ai_connection\"\n",
+    "    conn = pf.connections.get(name=conn_name)\n",
+    "    print(\"using existing connection\")\n",
+    "except:\n",
+    "    # Follow https://learn.microsoft.com/en-us/azure/ai-services/openai/how-to/create-resource?pivots=web-portal to create an Azure Open AI resource.\n",
+    "    connection = AzureOpenAIConnection(\n",
+    "        name=conn_name,\n",
+    "        api_key=\"<user-input>\",\n",
+    "        api_base=\"<test_base>\",\n",
+    "        api_type=\"azure\",\n",
+    "        api_version=\"<test_version>\",\n",
+    "    )\n",
+    "\n",
+    "    # use this if you have an existing OpenAI account\n",
+    "    # connection = OpenAIConnection(\n",
+    "    #     name=conn_name,\n",
+    "    #     api_key=\"<user-input>\",\n",
+    "    # )\n",
+    "    conn = pf.connections.create_or_update(connection)\n",
+    "    print(\"successfully created connection\")\n",
+    "\n",
+    "print(conn)"
    ]
   },
   {
@@ -87,7 +131,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "f = load_flow(source=\"../../../flows/chat/basic-chat\")\n",
+    "f = load_flow(source=\"../../flows/chat/basic-chat\")\n",
     "f.context.streaming = True\n",
     "result = f(\n",
     "    chat_history=[\n",
@@ -95,12 +139,17 @@
     "            \"inputs\": {\"chat_input\": \"Hi\"}, \n",
     "            \"outputs\": {\"chat_output\": \"Hello! How can I assist you today?\"}\n",
     "        }\n",
-    "    ]\n",
+    "    ],\n",
+    "    question=\"How are you?\"\n",
     ")\n",
     "\n",
+    "\n",
+    "answer = \"\"\n",
     "# the result will be a generator, iterate it to get the result\n",
-    "for r in result:\n",
-    "    print(r)"
+    "for r in result[\"answer\"]:\n",
+    "    answer += r\n",
+    "\n",
+    "print(answer)"
    ]
   }
  ],
