--- a/examples/tutorials/run-management/cloud-run-management.ipynb
+++ b/examples/tutorials/run-management/cloud-run-management.ipynb
@@ -10,7 +10,7 @@
     "- An Azure account with an active subscription - [Create an account for free](https://azure.microsoft.com/free/?WT.mc_id=A261C142F)\n",
     "- An Azure ML workspace - [Configure workspace](../../configuration.ipynb)\n",
     "- A python environment\n",
-    "- Installed PromptFlow SDK\n",
+    "- Installed prompt flow SDK\n",
     "\n",
     "\n",
     "**Learning Objectives** - By the end of this tutorial, you should be able to:\n",
