--- a/examples/tutorials/run-management/run-management.ipynb
+++ b/examples/tutorials/run-management/run-management.ipynb
@@ -7,7 +7,7 @@
     "# Flow Run Management\n",
     "\n",
     "**Prerequisite** - To make the most of this tutorial, you'll need:\n",
-    "- A local clone of the Prompt Flow repository\n",
+    "- A local clone of the prompt flow repository\n",
     "- A Python environment with Jupyter Notebook support (such as Jupyter Lab or the Python extension for Visual Studio Code)\n",
     "- Know how to program with Python :)\n",
     "\n",
