[SDK]Changed column mapping `${run.inputs.xx}`'s behavior, it will refer to run's data columns instead of run's inputs columns. (#969)
# Description

Please add an informative description that covers that changes made by
the pull request and link all relevant issues.

This PR changed column mapping `${run.inputs.xx}`'s behavior, it will
refer to run's data columns instead of run's inputs columns to align
with cloud's behavior.


# All Promptflow Contribution checklist:
- [ ] **The pull request does not introduce [breaking changes].**
- [ ] **CHANGELOG is updated for new features, bug fixes or other
significant changes.**
- [ ] **I have read the [contribution guidelines](../CONTRIBUTING.md).**
- [ ] **Create an issue and link to the pull request to get dedicated
review from promptflow team. Learn more: [suggested
workflow](../CONTRIBUTING.md#suggested-workflow).**

## General Guidelines and Best Practices
- [ ] Title of the pull request is clear and informative.
- [ ] There are a small number of commits, each of which have an
informative message. This means that previously merged commits do not
appear in the history of the PR. For more information on cleaning up the
commits in your PR, [see this
page](https://github.com/Azure/azure-powershell/blob/master/documentation/development-docs/cleaning-up-commits.md).

### Testing Guidelines
- [ ] Pull request includes test coverage for the included changes.

--- a/examples/tutorials/run-management/run-management.ipynb
+++ b/examples/tutorials/run-management/run-management.ipynb
@@ -142,7 +142,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3 Create a flow run which uses an existing run's inputs data\n",
+    "## 3 Create a flow run which uses an existing run's inputs\n",
     "\n",
     "When running a flow with an existing run, you can reference either it's inputs or outputs in column mapping.\n",
     "The following code cell show how to reference a run's inputs in column mapping."
@@ -163,7 +163,7 @@
     "    # run name\n",
     "    run=base_run,\n",
     "    column_mapping={\n",
-    "        # reference another run's inputs\n",
+    "        # reference another run's inputs data column\n",
     "        \"url\": \"${run.inputs.url}\",\n",
     "    },\n",
     ")\n",
