--- a/examples/tutorials/run-management/cloud-run-management.ipynb
+++ b/examples/tutorials/run-management/cloud-run-management.ipynb
@@ -241,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 3 Create a flow run which uses an existing run's inputs data\n",
+    "## 3 Create a flow run which uses an existing run's inputs\n",
     "\n",
     "When running a flow with an existing run, you can reference either it's inputs or outputs in column mapping.\n",
     "The following code cell show how to reference a run's inputs in column mapping."
@@ -259,7 +259,7 @@
     "    # run name\n",
     "    run=run,\n",
     "    column_mapping={\n",
-    "        # reference another run's inputs\n",
+    "        # reference another run's input data columns\n",
     "        \"url\": \"${run.inputs.url}\",\n",
     "        \"answer\": \"${run.inputs.answer}\",\n",
     "        \"evidence\": \"${run.inputs.evidence}\",\n",
@@ -376,7 +376,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.17"
+   "version": "3.8.13"
   }
  },
  "nbformat": 4,
