--- a/examples/tutorials/get-started/flow-as-function.ipynb
+++ b/examples/tutorials/get-started/flow-as-function.ipynb
@@ -42,6 +42,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "metadata": {
+    "tags": [
+     "parameters"
+    ]
+   },
+   "outputs": [],
+   "source": [
+    "# provide parameters to create connection\n",
+    "\n",
+    "conn_name = \"new_ai_connection\"\n",
+    "api_key = \"<user-input>\"\n",
+    "api_base = \"<user-input>\"\n",
+    "api_version = \"<user-input>\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,27 +69,24 @@
     "\n",
     "pf = promptflow.PFClient()\n",
     "\n",
-    "try:\n",
-    "    conn_name = \"new_ai_connection\"\n",
-    "    conn = pf.connections.get(name=conn_name)\n",
-    "    print(\"using existing connection\")\n",
-    "except:\n",
-    "    # Follow https://learn.microsoft.com/en-us/azure/ai-services/openai/how-to/create-resource?pivots=web-portal to create an Azure Open AI resource.\n",
-    "    connection = AzureOpenAIConnection(\n",
-    "        name=conn_name,\n",
-    "        api_key=\"<user-input>\",\n",
-    "        api_base=\"<test_base>\",\n",
-    "        api_type=\"azure\",\n",
-    "        api_version=\"<test_version>\",\n",
-    "    )\n",
     "\n",
-    "    # use this if you have an existing OpenAI account\n",
-    "    # connection = OpenAIConnection(\n",
-    "    #     name=conn_name,\n",
-    "    #     api_key=\"<user-input>\",\n",
-    "    # )\n",
-    "    conn = pf.connections.create_or_update(connection)\n",
-    "    print(\"successfully created connection\")\n",
+    "# Follow https://learn.microsoft.com/en-us/azure/ai-services/openai/how-to/create-resource?pivots=web-portal to create an Azure Open AI resource.\n",
+    "connection = AzureOpenAIConnection(\n",
+    "    name=conn_name,\n",
+    "    api_key=api_key,\n",
+    "    api_base=api_base,\n",
+    "    api_type=\"azure\",\n",
+    "    api_version=api_version,\n",
+    ")\n",
+    "\n",
+    "# use this if you have an existing OpenAI account\n",
+    "# connection = OpenAIConnection(\n",
+    "#     name=conn_name,\n",
+    "#     api_key=api_key,\n",
+    "# )\n",
+    "\n",
+    "conn = pf.connections.create_or_update(connection)\n",
+    "print(\"successfully created connection\")\n",
     "\n",
     "print(conn)"
    ]
@@ -85,8 +100,8 @@
     "f = load_flow(\n",
     "    source=flow_path,\n",
     ")\n",
-    "# need to create the connection\n",
-    "f.context.connections={\"classify_with_llm\": {\"connection\": \"new_ai_connection\"}}\n",
+    "# directly use connection created above\n",
+    "f.context.connections={\"classify_with_llm\": {\"connection\": conn}}\n",
     "\n",
     "result = f(url=sample_url)\n",
     "\n",
