--- a/examples/tutorials/get-started/flow-as-function.ipynb
+++ b/examples/tutorials/get-started/flow-as-function.ipynb
@@ -67,8 +67,6 @@
     "import promptflow\n",
     "from promptflow.entities import AzureOpenAIConnection, OpenAIConnection\n",
     "\n",
-    "pf = promptflow.PFClient()\n",
-    "\n",
     "\n",
     "# Follow https://learn.microsoft.com/en-us/azure/ai-services/openai/how-to/create-resource?pivots=web-portal to create an Azure Open AI resource.\n",
     "connection = AzureOpenAIConnection(\n",
@@ -83,12 +81,7 @@
     "# connection = OpenAIConnection(\n",
     "#     name=conn_name,\n",
     "#     api_key=api_key,\n",
-    "# )\n",
-    "\n",
-    "conn = pf.connections.create_or_update(connection)\n",
-    "print(\"successfully created connection\")\n",
-    "\n",
-    "print(conn)"
+    "# )\n"
    ]
   },
   {
@@ -101,7 +94,7 @@
     "    source=flow_path,\n",
     ")\n",
     "# directly use connection created above\n",
-    "f.context.connections={\"classify_with_llm\": {\"connection\": conn}}\n",
+    "f.context.connections={\"classify_with_llm\": {\"connection\": connection}}\n",
     "\n",
     "result = f(url=sample_url)\n",
     "\n",
