solve some conflicts

--- a/examples/tutorials/get-started/flow-as-function.ipynb
+++ b/examples/tutorials/get-started/flow-as-function.ipynb
@@ -16,7 +16,7 @@
     "from promptflow import load_flow\n",
     "\n",
     "\n",
-    "flow_path=\"../../flows/standard/web-classification\"\n",
+    "flow_path = \"../../flows/standard/web-classification\"\n",
     "sample_url = \"https://www.youtube.com/watch?v=o5ZQyXaAv1g\"\n",
     "\n",
     "f = load_flow(source=flow_path)\n",
@@ -86,7 +86,7 @@
     "    source=flow_path,\n",
     ")\n",
     "# need to create the connection\n",
-    "f.context.connections={\"classify_with_llm\": {\"connection\": \"new_ai_connection\"}}\n",
+    "f.context.connections = {\"classify_with_llm\": {\"connection\": \"new_ai_connection\"}}\n",
     "\n",
     "result = f(url=sample_url)\n",
     "\n",
@@ -136,11 +136,11 @@
     "result = f(\n",
     "    chat_history=[\n",
     "        {\n",
-    "            \"inputs\": {\"chat_input\": \"Hi\"}, \n",
-    "            \"outputs\": {\"chat_output\": \"Hello! How can I assist you today?\"}\n",
+    "            \"inputs\": {\"chat_input\": \"Hi\"},\n",
+    "            \"outputs\": {\"chat_output\": \"Hello! How can I assist you today?\"},\n",
     "        }\n",
     "    ],\n",
-    "    question=\"How are you?\"\n",
+    "    question=\"How are you?\",\n",
     ")\n",
     "\n",
     "\n",
