--- a/examples/tutorials/get-started/flow-as-function.ipynb
+++ b/examples/tutorials/get-started/flow-as-function.ipynb
@@ -4,7 +4,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example1: Load flow as a function with inputs"
+    "# Execute flow as a function\n",
+    "\n",
+    "**Requirements** - In order to benefit from this tutorial, you will need:\n",
+    "- A python environment\n",
+    "- Installed PromptFlow SDK\n",
+    "\n",
+    "**Learning Objectives** - By the end of this tutorial, you should be able to:\n",
+    "- Execute a flow as a function\n",
+    "- Execute a flow function with in-memort connection object override\n",
+    "- Execute a flow function with fields override\n",
+    "- Execute a flow function with streaming output\n",
+    "\n",
+    "**Motivations** - This guide will walk you through the main scenarios of executing flow as a function. You will learn how to consume flow as a function in different scenarios for more pythonnic usage."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Example1: Load flow as a function with inputs"
    ]
   },
   {
@@ -29,7 +48,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Example2: Load flow as a function with connection overwrite"
+    "## Example2: Load flow as a function with in-memory connection override"
    ]
   },
   {
@@ -105,7 +124,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Example 3: Local flow as a function with flow inputs overwrite"
+    "## Example 3: Local flow as a function with flow inputs override"
    ]
   },
   {
