--- a/examples/tutorials/get-started/flow-as-function.ipynb
+++ b/examples/tutorials/get-started/flow-as-function.ipynb
@@ -8,11 +8,11 @@
     "\n",
     "**Requirements** - In order to benefit from this tutorial, you will need:\n",
     "- A python environment\n",
-    "- Installed PromptFlow SDK\n",
+    "- Installed prompt flow SDK\n",
     "\n",
     "**Learning Objectives** - By the end of this tutorial, you should be able to:\n",
     "- Execute a flow as a function\n",
-    "- Execute a flow function with in-memort connection object override\n",
+    "- Execute a flow function with in-memory connection object override\n",
     "- Execute a flow function with fields override\n",
     "- Execute a flow function with streaming output\n",
     "\n",
