--- a/examples/tutorials/get-started/quickstart-azure.ipynb
+++ b/examples/tutorials/get-started/quickstart-azure.ipynb
@@ -10,7 +10,7 @@
     "- An Azure account with an active subscription - [Create an account for free](https://azure.microsoft.com/free/?WT.mc_id=A261C142F)\n",
     "- An Azure ML workspace - [Configure workspace](../../configuration.ipynb)\n",
     "- A python environment\n",
-    "- Installed prompt-flow SDK\n",
+    "- Installed prompt flow SDK\n",
     "\n",
     "**Learning Objectives** - By the end of this tutorial, you should be able to:\n",
     "- Connect to your Azure AI workspace from the Python SDK\n",
@@ -426,7 +426,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.9.17"
   }
  },
  "nbformat": 4,
