--- a/examples/tutorials/flow-in-pipeline/pipeline.ipynb
+++ b/examples/tutorials/flow-in-pipeline/pipeline.ipynb
@@ -195,9 +195,7 @@
   }
  ],
  "metadata": {
-  "description": {
-   "description": "Create pipeline using components to run a distributed job with tensorflow"
-  },
+  "description": "Create pipeline using components to run a distributed job with tensorflow",
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
