--- a/examples/tutorials/get-started/flow-as-function.ipynb
+++ b/examples/tutorials/get-started/flow-as-function.ipynb
@@ -100,7 +100,7 @@
     "# connection = OpenAIConnection(\n",
     "#     name=conn_name,\n",
     "#     api_key=api_key,\n",
-    "# )\n"
+    "# )"
    ]
   },
   {
@@ -113,7 +113,7 @@
     "    source=flow_path,\n",
     ")\n",
     "# directly use connection created above\n",
-    "f.context.connections={\"classify_with_llm\": {\"connection\": connection}}\n",
+    "f.context.connections = {\"classify_with_llm\": {\"connection\": connection}}\n",
     "\n",
     "result = f(url=sample_url)\n",
     "\n",
@@ -181,6 +181,7 @@
   }
  ],
  "metadata": {
+  "description": "This guide will walk you through the main scenarios of executing flow as a function.",
   "kernelspec": {
    "display_name": "github_v2",
    "language": "python",
