--- a/examples/tutorials/get-started/quickstart.ipynb
+++ b/examples/tutorials/get-started/quickstart.ipynb
@@ -169,6 +169,19 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from promptflow import load_flow\n",
+    "\n",
+    "flow_func = load_flow(flow)\n",
+    "flow_result = flow_func(**flow_inputs)\n",
+    "print(f\"Flow function result: {flow_result}\")"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
