replace with tmp CI hosted runtime

--- a/examples/tutorials/run-management/cloud-run-management.ipynb
+++ b/examples/tutorials/run-management/cloud-run-management.ipynb
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "runtime = \"example-runtime-ci\"  # TODO replace with your runtime name"
+    "runtime = \"tmp-example-runtime-ci\"  # TODO replace with your runtime name"
    ]
   },
   {
