--- a/examples/tutorials/get-started/quickstart-azure.ipynb
+++ b/examples/tutorials/get-started/quickstart-azure.ipynb
@@ -107,7 +107,7 @@
     "# Get a handle to workspace\n",
     "pf = PFClient.from_config(credential=credential)\n",
     "\n",
-    "runtime = \"test-runtime-ci\"  # TODO replace with your runtime name"
+    "runtime = \"tmp-example-runtime-ci\"  # TODO replace with your runtime name"
    ]
   },
   {
