chat-with-pdf azure

--- a/examples/flows/chat/chat-with-pdf/chat-with-pdf-azure.ipynb
+++ b/examples/flows/chat/chat-with-pdf/chat-with-pdf-azure.ipynb
@@ -63,9 +63,7 @@
     "import promptflow.azure as azure\n",
     "\n",
     "# Get a handle to workspace\n",
-    "pf = azure.PFClient.from_config(credential=credential)\n",
-    "runtime = \"example-runtime-ci\"  # TODO add guide to create runtime\n",
-    "# runtime = None # automatic runtime"
+    "pf = azure.PFClient.from_config(credential=credential)"
    ]
   },
   {
@@ -132,7 +130,6 @@
     "    flow=flow_path,\n",
     "    data=data_path,\n",
     "    column_mapping=column_mapping,\n",
-    "    runtime=runtime,\n",
     "    display_name=\"chat_with_pdf_2k_context\",\n",
     "    tags={\"chat_with_pdf\": \"\", \"1st_round\": \"\"},\n",
     ")\n",
@@ -176,7 +173,6 @@
     "eval_groundedness_flow_path = \"../../evaluation/eval-groundedness/\"\n",
     "eval_groundedness_2k_context = pf.run(\n",
     "    flow=eval_groundedness_flow_path,\n",
-    "    runtime=runtime,\n",
     "    run=run_2k_context,\n",
     "    column_mapping={\n",
     "        \"question\": \"${run.inputs.question}\",\n",
@@ -226,7 +222,6 @@
     "    flow=flow_path,\n",
     "    data=data_path,\n",
     "    column_mapping=column_mapping,\n",
-    "    runtime=runtime,\n",
     "    display_name=\"chat_with_pdf_3k_context\",\n",
     "    tags={\"chat_with_pdf\": \"\", \"2nd_round\": \"\"},\n",
     ")\n",
@@ -261,7 +256,6 @@
    "source": [
     "eval_groundedness_3k_context = pf.run(\n",
     "    flow=eval_groundedness_flow_path,\n",
-    "    runtime=runtime,\n",
     "    run=run_3k_context,\n",
     "    column_mapping={\n",
     "        \"question\": \"${run.inputs.question}\",\n",
