--- a/examples/tutorials/get-started/quickstart-azure.ipynb
+++ b/examples/tutorials/get-started/quickstart-azure.ipynb
@@ -105,9 +105,7 @@
    "outputs": [],
    "source": [
     "# Get a handle to workspace\n",
-    "pf = PFClient.from_config(credential=credential)\n",
-    "\n",
-    "runtime = \"example-runtime-ci\"  # TODO replace with your runtime name"
+    "pf = PFClient.from_config(credential=credential)"
    ]
   },
   {
@@ -170,7 +168,6 @@
     "base_run = pf.run(\n",
     "    flow=flow,\n",
     "    data=data,\n",
-    "    runtime=runtime,\n",
     ")\n",
     "print(base_run)"
    ]
@@ -227,7 +224,6 @@
     "        \"groundtruth\": \"${data.answer}\",\n",
     "        \"prediction\": \"${run.outputs.category}\",\n",
     "    },\n",
-    "    runtime=runtime,\n",
     ")"
    ]
   },
@@ -308,7 +304,6 @@
     "    flow=flow,\n",
     "    data=data,\n",
     "    variant=\"${summarize_text_content.variant_1}\",  # here we specify node \"summarize_text_content\" to use variant 1 version.\n",
-    "    runtime=runtime,\n",
     ")"
    ]
   },
@@ -356,7 +351,6 @@
     "        # reference the run's output\n",
     "        \"prediction\": \"${run.outputs.category}\",\n",
     "    },\n",
-    "    runtime=runtime,\n",
     ")"
    ]
   },
