--- a/examples/tutorials/run-management/cloud-run-management.ipynb
+++ b/examples/tutorials/run-management/cloud-run-management.ipynb
@@ -130,25 +130,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1.5 Create runtime\n",
-    "Prompt flow’s runtime provides the computing resources required for the application to run. \n",
-    "\n",
-    "In this notebook, you can follow this [instruction](https://learn.microsoft.com/en-us/azure/machine-learning/prompt-flow/how-to-create-manage-runtime?view=azureml-api-2) to create a runtime in workspace then use it to submit flow runs."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "runtime = \"example-runtime-ci\"  # TODO replace with your runtime name"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## 2. Create run with remote data\n",
     "\n",
     "Instead of relying on local files, there may be situations where you want to reuse data that's already available in your workspace when submitting a flow.\n",
@@ -198,7 +179,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2.3 Create a flow run with remote data"
+    "### 2.3 Create a flow run with remote data\n",
+    "\n",
+    "You can change instance type or idle time of the runtime or reset it to clean state. The following code cell shows how to do so."
    ]
   },
   {
@@ -213,11 +196,17 @@
     "    flow=\"../../flows/standard/web-classification\",\n",
     "    # remote data\n",
     "    data=data_id,\n",
+    "    # to customize runtime instance type and idle time, you can provide them in resources\n",
+    "    # resources={\n",
+    "    #     \"instance_type\": \"STANDARD_DS11_V2\",\n",
+    "    #     \"idle_time_before_shutdown_minutes\": 10\n",
+    "    # }    \n",
     ")\n",
     "\n",
     "base_run = pf.runs.create_or_update(\n",
     "    run=run,\n",
-    "    runtime=runtime,\n",
+    "    # to reset automatic runtime to clean state, set reset_runtime to True\n",
+    "    # reset_runtime=True,\n",
     ")"
    ]
   },
@@ -268,7 +257,6 @@
     "\n",
     "base_run = pf.runs.create_or_update(\n",
     "    run=run,\n",
-    "    runtime=runtime,\n",
     ")\n",
     "\n",
     "pf.runs.stream(base_run)"
@@ -305,7 +293,6 @@
     "\n",
     "base_run = pf.runs.create_or_update(\n",
     "    run=run,\n",
-    "    runtime=runtime,\n",
     ")\n",
     "\n",
     "pf.runs.stream(base_run)"
@@ -315,19 +302,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 4 Create a flow run which uses automatic runtime\n",
+    "## 4 Create a flow run which uses custom runtime\n",
     "\n",
-    "If you don't want to create your own runtime, you can leave the `runtime` field empty to use system automatic created runtime.\n",
-    "To customize base image or python packages, you can add the following config in your `flow.dag.yaml`:\n",
+    "Prompt flow’s runtime provides the computing resources required for the application to run. You can follow this [instruction](https://learn.microsoft.com/en-us/azure/machine-learning/prompt-flow/how-to-create-manage-runtime?view=azureml-api-2) to create a runtime in workspace then use it to submit flow runs.\n",
     "\n",
-    "```yml\n",
-    "environment:\n",
-    "    image: python:3.8-slim\n",
-    "    python_requirements_txt: requirements.txt\n",
-    "```\n",
-    "\n",
-    "You can also change instance type or idle time of the automatic runtime or reset the automatic runtime to clean state.\n",
-    "The following code cell shows how to do so."
+    "The following code cell shows how to use your custom runtime."
    ]
   },
   {
@@ -342,19 +321,11 @@
     "    flow=\"../../flows/standard/web-classification\",\n",
     "    # remote data\n",
     "    data=data_id,\n",
-    "    # to customize automatic runtime instance type and idle time, you can provide them in resources\n",
-    "    # resources={\n",
-    "    #     \"instance_type\": \"STANDARD_DS11_V2\",\n",
-    "    #     \"idle_time_before_shutdown_minutes\": 10\n",
-    "    # }\n",
     ")\n",
     "\n",
     "base_run = pf.runs.create_or_update(\n",
     "    run=run,\n",
-    "    # leave runtime None to use automatic runtime\n",
-    "    runtime=None,\n",
-    "    # to reset automatic runtime to clean state, set reset_runtime to True\n",
-    "    # reset_runtime=True,\n",
+    "    runtime = \"<runtime-name>\"  # TODO replace with your runtime name\n",
     ")"
    ]
   }
