comment create with specific runtime name

--- a/examples/tutorials/run-management/cloud-run-management.ipynb
+++ b/examples/tutorials/run-management/cloud-run-management.ipynb
@@ -323,10 +323,12 @@
     "    data=data_id,\n",
     ")\n",
     "\n",
-    "base_run = pf.runs.create_or_update(\n",
-    "    run=run,\n",
-    "    runtime = \"<runtime-name>\"  # TODO replace with your runtime name\n",
-    ")"
+    "# comment below create operation as it requires a runtime with specific name\n",
+    "# which will break CI pipeline\n",
+    "# base_run = pf.runs.create_or_update(\n",
+    "#     run=run,\n",
+    "#     runtime = \"<runtime-name>\"  # TODO replace with your runtime name\n",
+    "# )"
    ]
   }
  ],
