--- a/examples/tutorials/run-management/cloud-run-management.ipynb
+++ b/examples/tutorials/run-management/cloud-run-management.ipynb
@@ -18,7 +18,7 @@
     "- create run which references another runs inputs\n",
     "- manage runs via run.yaml\n",
     "- create run with connection override\n",
-    "- automatic runtime\n",
+    "- create run with custom runtime\n",
     "\n",
     "\n",
     "**Motivations** - This guide will walk you through cloud run management abilities."
