--- a/examples/prompty/basic/prompty-quickstart.ipynb
+++ b/examples/prompty/basic/prompty-quickstart.ipynb
@@ -101,6 +101,47 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "You can override configuration with `AzureOpenAIModelConfiguration` and `OpenAIModelConfiguration`."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from promptflow.core import AzureOpenAIModelConfiguration, OpenAIModelConfiguration\n",
+    "\n",
+    "# override configuration with AzureOpenAIModelConfiguration\n",
+    "configuration = AzureOpenAIModelConfiguration(\n",
+    "    # azure_endpoint=\"${env:AZURE_OPENAI_ENDPOINT}\",  # Use ${env:<ENV_NAME>} to surround the environment variable name.\n",
+    "    # api_key=\"${env:AZURE_OPENAI_API_KEY}\",\n",
+    "    azure_deployment=\"gpt-35-turbo-0125\",\n",
+    ")\n",
+    "\n",
+    "# override configuration with OpenAIModelConfiguration\n",
+    "# configuration = OpenAIModelConfiguration(\n",
+    "#     base_url=\"${env:OPENAI_BASE_URL}\",\n",
+    "#     api_key=\"${env:OPENAI_API_KEY}\",\n",
+    "#     model=\"gpt-3.5-turbo\"\n",
+    "# )\n",
+    "\n",
+    "override_model = {\"configuration\": configuration, \"parameters\": {\"max_tokens\": 512}}\n",
+    "\n",
+    "# load prompty as a flow\n",
+    "f = Prompty.load(source=\"basic.prompty\", model=override_model)\n",
+    "\n",
+    "# execute the flow as function\n",
+    "result = f(\n",
+    "    first_name=\"John\", last_name=\"Doe\", question=\"What is the capital of France?\"\n",
+    ")\n",
+    "result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Visualize trace by using start_trace"
    ]
   },
