--- a/examples/tutorials/run-flow-with-pipeline/pipeline.ipynb
+++ b/examples/tutorials/run-flow-with-pipeline/pipeline.ipynb
@@ -296,6 +296,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ensure the credential is still valid, refresh the token if needed\n",
+    "credential.get_token(\"https://management.azure.com/.default\")\n",
     "# Submit the pipeline job to your workspace\n",
     "pipeline_job_run = ml_client.jobs.create_or_update(\n",
     "    pipeline_job_def, experiment_name=\"Single_flow_component_pipeline_job\"\n",
@@ -414,6 +416,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ensure the credential is still valid, refresh the token if needed\n",
+    "credential.get_token(\"https://management.azure.com/.default\")\n",
     "# submit job to workspace\n",
     "pipeline_job_run = ml_client.jobs.create_or_update(\n",
     "    pipeline_job_def, experiment_name=\"Complex_flow_component_pipeline_job\"\n",
@@ -477,6 +481,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ensure the credential is still valid, refresh the token if needed\n",
+    "credential.get_token(\"https://management.azure.com/.default\")\n",
+    "\n",
     "job_schedule = ml_client.schedules.begin_create_or_update(\n",
     "    schedule=job_schedule\n",
     ").result()\n",
@@ -498,6 +505,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ensure the credential is still valid, refresh the token if needed\n",
+    "credential.get_token(\"https://management.azure.com/.default\")\n",
+    "\n",
     "job_schedule = ml_client.schedules.begin_disable(name=schedule_name).result()\n",
     "job_schedule.is_enabled"
    ]
@@ -537,6 +547,9 @@
     "    description=\"A hello world endpoint for pipeline\",\n",
     ")\n",
     "\n",
+    "# Ensure the credential is still valid, refresh the token if needed\n",
+    "credential.get_token(\"https://management.azure.com/.default\")\n",
+    "\n",
     "ml_client.batch_endpoints.begin_create_or_update(endpoint).result()"
    ]
   },
@@ -562,7 +575,13 @@
     "    settings={\"default_compute\": \"cpu-cluster\", \"continue_on_step_failure\": False},\n",
     ")\n",
     "\n",
+    "# Ensure the credential is still valid, refresh the token if needed\n",
+    "credential.get_token(\"https://management.azure.com/.default\")\n",
+    "\n",
     "ml_client.batch_deployments.begin_create_or_update(deployment).result()\n",
+    "\n",
+    "# Ensure the credential is still valid, refresh the token if needed\n",
+    "credential.get_token(\"https://management.azure.com/.default\")\n",
     "\n",
     "# Refresh the default deployment to the latest one at our endpoint.\n",
     "endpoint = ml_client.batch_endpoints.get(endpoint.name)\n",
@@ -583,6 +602,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ensure the credential is still valid, refresh the token if needed\n",
+    "credential.get_token(\"https://management.azure.com/.default\")\n",
+    "\n",
     "batch_endpoint_job = ml_client.batch_endpoints.invoke(\n",
     "    endpoint_name=endpoint.name,\n",
     "    inputs={\"pipeline_input_data\": data_input},\n",
@@ -602,6 +624,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Ensure the credential is still valid, refresh the token if needed\n",
+    "credential.get_token(\"https://management.azure.com/.default\")\n",
+    "\n",
     "ml_client.jobs.get(batch_endpoint_job.name)"
    ]
   },
