--- a/examples/tutorials/run-flow-with-pipeline/pipeline.ipynb
+++ b/examples/tutorials/run-flow-with-pipeline/pipeline.ipynb
@@ -79,18 +79,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def ensure_credential():\n",
-    "    try:\n",
-    "        credential = DefaultAzureCredential()\n",
-    "        # Check if given credential can get token successfully.\n",
-    "        credential.get_token(\"https://management.azure.com/.default\")\n",
-    "    except Exception as ex:\n",
-    "        # Fall back to InteractiveBrowserCredential in case DefaultAzureCredential not work\n",
-    "        credential = InteractiveBrowserCredential()\n",
-    "    return credential\n",
-    "\n",
-    "\n",
-    "credential = ensure_credential()"
+    "try:\n",
+    "    credential = DefaultAzureCredential()\n",
+    "    # Check if given credential can get token successfully.\n",
+    "    credential.get_token(\"https://management.azure.com/.default\")\n",
+    "except Exception as ex:\n",
+    "    # Fall back to InteractiveBrowserCredential in case DefaultAzureCredential not work\n",
+    "    credential = InteractiveBrowserCredential()"
    ]
   },
   {
